# latent-action-molecule-generation

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
.github/prompts/: plan-removeHydraRefactoring.prompt.md
configs/: finetune_base.yaml  finetune_controllable.yaml  policy_distillation.yaml  pretrain_base.yaml  pretrain_controllable.yaml
experiments/: run_all.ssh
experiments/finetune_base/: run.ssh
experiments/finetune_controllable/: run.ssh  test.ipynb
experiments/policy_distillation/: run.ssh
experiments/pretrain_base/: run.ssh
experiments/pretrain_controllable/: run.ssh
interdiff/: __init__.py  config.py  dataset.py  envs.py  io.py  metrics.py  models.py  modules.py  molecules.py  optim.py  ppo.py  tokenise.py
interdiff/conf/: config.yaml  context.yaml  ppo_config.yaml
interdiff/conf/ckpt/: default.yaml
interdiff/conf/experiment/: base_gpt.yaml  controllable_gpt.yaml  finetune_base.yaml  finetune_controllable.yaml  pretrain-policy.yaml
interdiff/conf/loader/: base_gpt.yaml  controllable_gpt.yaml  finetune_base.yaml
interdiff/conf/log/: wandb.yaml
interdiff/conf/ppo/: default.yaml
interdiff/conf/reward/: sa.yaml
interdiff/conf/sched/: cosine_decay.yaml
interdiff/conf/sys/: runtime.yaml
interdiff/conf/tokenizer/: smiles.yaml
interdiff/conf/train_cfg/: controllable_gpt.yaml  pretrain-policy.yaml
interdiff/conf/trainer/: controllable_gpt.yaml
interdiff/conf_hydra_deprecated/data/: zinc.yaml
interdiff/conf_hydra_deprecated/experiment/: controllable_gpt.yaml  finetune_base.yaml
interdiff/conf_hydra_deprecated/loader/: finetune_controllable.yaml  pretrain-policy.yaml
interdiff/conf_hydra_deprecated/model/: base_gpt.yaml  controllable_gpt.yaml  pretrain-policy.yaml
interdiff/conf_hydra_deprecated/optim/: adamw.yaml
interdiff/conf_hydra_deprecated/reward/: default.yaml  logp.yaml  mw.yaml  qed.yaml  tpsa.yaml
interdiff/conf_hydra_deprecated/rl_train_cfg/: default.yaml
interdiff/conf_hydra_deprecated/train_cfg/: base_gpt.yaml
interdiff/conf_hydra_deprecated/trainer/: base_gpt.yaml  pretrain-policy.yaml
interdiff/data/: ControllableGPTLoader.py  GPTLoader.py  PretrainPolicyLoader.py  RLLoader.py
interdiff/data/processed/zinc_tok_seqlen_128_vocabsize_50/: tokenizer.json
interdiff/data/processed/zinc_tok_seqlen_128_vocabsize_500/: tokenizer.json
interdiff/data/zinc/: __init__.py  tokenizer.json
interdiff/logging/: logger.py  wandb_logger.py
interdiff/trainers/: ControllableGPTTrainer.py  GPTTrainer.py  PretrainPolicyTrainer.py  __init__.py  base.py  base_RL.py
interdiff/utils/: __init__.py  eval_utils.py  str_utils.py  torch_utils.py
scripts/: generate_actions.py  tokenise_dataset.py  train.py  train_ppo.py
test/: test_envs.py
(+1 files in other folders)
